<resources>
    <string name="app_name">StatiFYI</string>
    <string name="app_version">Version v1.0.0</string>
    <string name="copyright">Copyright &#169; Statifyi, Inc</string>
    <string name="app_welcome">Welcome to StatiFYI</string>
    <string name="statifyi.com">http://statifyi.com</string>
    <string name="google_api_key">AIzaSyAsL02Jd_f_Yduy3M6qKbJUZdEmGANVJaI</string>
    <string name="google_project_id">733817804371</string>

    <string name="welcome_message1">Know the status of your call recipient as you dial</string>
    <string name="welcome_message2">Know the status of your contacts</string>
    <string name="welcome_message3">Your Phone number is your ID</string>
    <string name="register_message">We will send you a Verification code via SMS to verify your Phone number. Ensure that you have a working SMS plan. Carrier charges may apply</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_auto_status">Auto status</string>
    <string name="menu_timely_status">Timely status</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_invite">Invite friends</string>
    <string name="menu_rate">Rate StatiFYI</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>

    <string name="hint_mobile">Enter your Phone Number</string>
    <string name="hint_name">Enter your Full Name</string>
    <string name="hint_otp">Verification code</string>
    <string name="hint_dial_number">DIAL THE NUMBER</string>
    <string name="otp_message">Did you get Verification code via SMS to your Phone Number?</string>
    <string name="hint_enter_otp">Enter it here</string>
    <string name="hint_country">Choose your Country</string>
    <string name="hint_avatar">Click to change avatar</string>
    <string name="status">Status</string>
    <string name="home">HOME</string>
    <string name="next">NEXT</string>
    <string name="close">DONE</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="please_wait">Please wait…</string>
    <string name="join_statifyi">JOIN STATIFYI</string>
    <string name="verify_mobile">VERIFY MOBILE</string>
    <string name="update_profile">UPDATE</string>
    <string name="finish">FINISH</string>
    <string name="resend_otp">Resend Verification code</string>
    <string name="change_mobile">Entered a wrong number? Tap here</string>
    <string name="_continue">CONTINUE</string>
    <string name="status_user_not_found">\u0020 is not on StatiFYI</string>
    <string name="status_no_network">Please be connected to get status</string>
    <string name="status_not_set">\u0020 did not set his/her status</string>
    <string name="sync_status_message">Syncing status messages of your contacts\nSit back and relax</string>

    <string-array name="letter_tile_colors">
        <item>#f16364</item>
        <item>#f58559</item>
        <item>#f9a43e</item>
        <item>#e4c62e</item>
        <item>#67bf74</item>
        <item>#59a2be</item>
        <item>#2093cd</item>
        <item>#ad62a7</item>
    </string-array>

    <string-array name="default_status_list">
        <item>At Cinemas</item>
        <item>At Home</item>
        <item>At Hospital</item>
        <item>At Office</item>
        <item>At Restaurant</item>
        <item>DND</item>
        <item>Doing Yoga</item>
        <item>Driving</item>
        <item>At Gym</item>
        <item>In Meeting</item>
        <item>On Low Battery</item>
        <item>In Morning Walk</item>
        <item>On Call</item>
        <item>On Holiday</item>
        <item>Partying</item>
        <item>Pet for Walk</item>
        <item>Reading Book</item>
        <item>At Saloon</item>
        <item>Shopping</item>
        <item>In Silent Mode</item>
        <item>Sleeping</item>
        <item>Sporting</item>
        <item>Watching TV</item>
        <item>With Family</item>
    </string-array>

    <string name="faq">FAQ</string>
    <string name="terms_policy">Terms and Privacy Policy</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_summary">Feel free to reach us 24 x 7</string>

    <string name="emergency_call">Emergency Call</string>
    <string name="business_call">Business Call</string>
    <string name="casual_call">Casual Call</string>
    <string name="normal_call">Normal Call</string>

    <string name="invalid_number">Please dial a valid number!</string>

    <string name="key_auto_status">autoStatus</string>
    <string name="key_low_battery">lowBattery</string>
    <string name="key_silent_mode">silentMode</string>
    <string name="key_vibrating_mode">vibratingMode</string>
    <string name="key_driving_mode">drivingMode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
