<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:summary="@string/app_version"
        android:title="@string/app_name" />

    <Preference android:title="@string/faq">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/statifyi.com" />
    </Preference>

    <Preference android:title="@string/terms_policy">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/statifyi.com" />
    </Preference>

    <Preference
        android:summary="@string/contact_us_summary"
        android:title="@string/contact_us">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/statifyi.com" />
    </Preference>

</PreferenceScreen>