<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_status"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_status"
            android:title="@string/app_name" />

        <item
            android:id="@+id/nav_auto_status"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_menu_auto"
            android:title="@string/menu_auto_status" />

        <item
            android:id="@+id/nav_timely_status"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_menu_timely"
            android:title="@string/menu_timely_status" />

        <item
            android:id="@+id/nav_privacy"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_menu_privacy"
            android:title="@string/menu_privacy" />

    </group>

    <group
        android:id="@+id/nav_group_general"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_invite"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_invite" />

        <item
            android:id="@+id/nav_rate"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_menu_rateapp"
            android:title="@string/menu_rate" />

        <item
            android:id="@+id/nav_about"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>

</menu>