<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="statifyi.com.statifyi.fragment.WelcomeFragment">


    <statifyi.com.statifyi.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcome_message_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:text="@string/app_welcome"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/welcome_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <statifyi.com.statifyi.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/dot"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/welcome_message1"
            android:textColor="#FFFFFF" />

        <statifyi.com.statifyi.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/dot"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/welcome_message2"
            android:textColor="#FFFFFF" />

        <statifyi.com.statifyi.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/dot"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/welcome_message3"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <statifyi.com.statifyi.widget.Button
        android:id="@+id/welcome_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_message_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:text="CONTINUE"
        android:textColor="@color/accentColor" />

</RelativeLayout>
